[gd_scene load_steps=18 format=3 uid="uid://mysjh2n183n4"]

[ext_resource type="Script" path="res://inimigo1_.gd" id="1_jbb8p"]
[ext_resource type="Texture2D" uid="uid://5t7qu2y35arg" path="res://32rogues/DwarvenDelve/DwarvenDelve/Characters/Enemies/SlimeSheet.png" id="2_xbymw"]
[ext_resource type="Texture2D" uid="uid://be45vk51dsajs" path="res://Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Orc/Orc with shadows/Orc-Walk.png" id="3_wdq80"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vfx76"]
atlas = ExtResource("2_xbymw")
region = Rect2(0, 0, 16, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6m2y"]
atlas = ExtResource("2_xbymw")
region = Rect2(16, 0, 16, 13)

[sub_resource type="SpriteFrames" id="SpriteFrames_uh2tl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfx76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6m2y")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_th7k4"]
atlas = ExtResource("3_wdq80")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4cl2"]
atlas = ExtResource("3_wdq80")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn0o7"]
atlas = ExtResource("3_wdq80")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbhac"]
atlas = ExtResource("3_wdq80")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuc4q"]
atlas = ExtResource("3_wdq80")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2l0g"]
atlas = ExtResource("3_wdq80")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_it0be"]
atlas = ExtResource("3_wdq80")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yva0n"]
atlas = ExtResource("3_wdq80")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_nebq1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_th7k4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4cl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn0o7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbhac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuc4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2l0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_it0be")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yva0n")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ngiiq"]
size = Vector2(24, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ly2e8"]
size = Vector2(22, 20)

[node name="inimigo1_" type="Area2D" groups=["inimigo"]]
collision_layer = 4
collision_mask = 133
script = ExtResource("1_jbb8p")

[node name="anim1" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_uh2tl")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.682572

[node name="anim2" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_nebq1")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.453706

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ngiiq")

[node name="Timer" type="Timer" parent="."]
wait_time = 40.0
one_shot = true
autostart = true

[node name="Label" type="Label" parent="."]
offset_left = -3.0
offset_top = -19.0
offset_right = 9.0
offset_bottom = -5.0
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer_label" type="Timer" parent="Label"]
wait_time = 0.8
autostart = true

[node name="CharacterBody2D" type="CharacterBody2D" parent="." groups=["inimigo"]]
collision_layer = 4
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("RectangleShape2D_ly2e8")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Label/Timer_label" to="." method="_on_timer_label_timeout"]
